cmake: Don't build dbus.devhelp2 if Doxygen is disabled
Previously this would be attempted whenever xsltproc was found, but
would fail if Doxygen documentation was disabled.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -44,7 +44,7 @@ if(XSLTPROC_EXECUTABLE)
     set(DBUS_HAVE_XSLTPROC 1)
 endif()
 
-if(DBUS_HAVE_XSLTPROC)
+if(DBUS_HAVE_XSLTPROC AND DBUS_ENABLE_DOXYGEN_DOCS)
     add_custom_command(
         OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/dbus.devhelp2
         COMMAND ${XSLTPROC_EXECUTABLE}
