_dbus_generate_random_bytes: use getrandom(2)
Use getrandom(2) and fall back to /dev/urandom if it is missing or if it
fails some any reason.

This solves problem where dbus-uuidgen is called from a chroot which
lacks /dev/urandom.

Signed-off-by: Natanael Copa <ncopa@alpinelinux.org>

--- a/configure.ac
+++ b/configure.ac
@@ -386,6 +386,7 @@ fpathconf
 getgrouplist
 getpeereid
 getpeerucred
+getrandom
 getresuid
 getrlimit
 inotify_init1
@@ -421,6 +422,7 @@ locale.h
 signal.h
 stdint.h
 sys/prctl.h
+sys/random.h
 sys/resource.h
 sys/syslimits.h
 sys/time.h
